# SurfaceFlinger

./: CMakeLists.txt  README  extract_code.sh  find-includes.sh  init.sh  modified_sources.txt  modules-dep.dot  modules-dep.pl  versions.txt
bionic/libc/kernel/common/linux/: android_pmem.h
frameworks/base/cmds/bootanimation/: BootAnimation.cpp  CMakeLists.txt
frameworks/base/cmds/servicemanager/: CMakeLists.txt  binder.h
frameworks/base/cmds/surfaceflinger/: CMakeLists.txt
frameworks/base/include/private/opengles/: gl_context.h
frameworks/base/libs/surfaceflinger/: CMakeLists.txt
frameworks/base/libs/surfaceflinger/DisplayHardware/: DisplayHardwareBase.cpp
frameworks/base/libs/ui/: CMakeLists.txt  EventHub.cpp
frameworks/base/libs/utils/: CMakeLists.txt  IServiceManager.cpp  SystemClock.cpp
frameworks/base/opengl/libagl/: CMakeLists.txt  egl.cpp
frameworks/base/opengl/libs/: CMakeLists.txt
frameworks/opt/emoji/: CMakeLists.txt
hardware/libhardware/: CMakeLists.txt
hardware/libhardware_legacy/: CMakeLists.txt
kernel/: Makefile  android-2.6.29-config  config-2.6.29-bpo.2-686
system/core/include/arch/linux-x86/: AndroidConfig.h
system/core/libcutils/: CMakeLists.txt  ashmem-dev.c  mq.c
system/core/liblog/: CMakeLists.txt
system/core/libpixelflinger/: CMakeLists.txt
system/core/logcat/: CMakeLists.txt
